# mcp-brave-search

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt  smithery.yaml
src/: server.py
src/mcp_brave_search/: __init__.py  client.py  server.py
tests/integration/: test_brave_search.py
tests/unit/: test_brave_search.py
